--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!doctype html>
+<html lang="nl">
 <head>
   <meta http-equiv="refresh" content="5; URL=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
 </head>
 <body>
   <p>This rickroll is made for Tom</p>
 </body>
+</html>
